# ai-editor

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.executor  Dockerfile.frontend  FOUNDATION_LOCK.md  GAGOS_FINAL_ROADMAP_council.md  GAGOS_SEASON_ONE_KICKOFF.md  HONEST_STATE.md  KICKOFF_PROMPT.md  LICENSE  PRODUCT.md  PROVE_IT.md  README.md  SECURITY.md  START_HERE.md  SYSTEM_AUDIT_2026-06-21.md  a.txt  agent_coord.py  aios-resume.ps1  aios-resume.sh  aiosv6_assessment_text.md  alerts.json  alerts2.json  alerts_all.json  alerts_closed.json  audit_report.md  backend_log.txt  blueprint_text.md  chat-ui.html  confidenceFilter.js  curriculum_evidence_driver.py  curriculum_seed.json  database.js  docker-compose.yml  (+37 more)
.github/: dependabot.yml  test.txt
aios/: __init__.py  __main__.py  audit_anchor.py  boot_attestation.py  bootstrap.py  config.py  executor_service.py  launcher.py  logging_config.py  probe_common.py
explorer_tests/: progress.md
frontend/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FIDELITY_BASELINE.md  GAGOS_Antigravity_Master_Prompt.md  GAGOS_Frontend_v10_Sovereign_Interface.md  README.md  eslint-final.json  eslint.config.js  fix_eslint.cjs  fix_imports.cjs  index.html  package-lock.json  package.json  patch_hud.cjs  strip.cjs  styles.css  tsconfig.json  vite.config.js
gateway/: nginx.conf  nginx.conf.template
lab/: conftest.py
legacy/: README.md  ingest_knowledge.py  reset_audit_chain.py  vector_memory_setup.py
legacy_node/: llmProvider.js  scopeLock.js  server.js
observability/: alert_rules.yml  alertmanager.yml  prometheus.yml
release/: organ-proof-manifest.json
scripts/: build_release_manifest.py  check-env.ps1  check_frontend_warning_budget.mjs  generate_r15_authoritative_proofs.py  generate_r15_fixture_examples.py  generate_r15_live_proofs.py  generate_sbom.py  security_scan.py  verify_organ_contracts.py
tests/: __init__.py  conftest.py  cortex_event_helpers.py  helpers.py  security.test.js  test_action_broker.py  test_action_envelope.py  test_action_guard.py  (+249 more)
(+1101 files in other folders)
